--- a/PJA_Skills_032/Pages/SettingsPage.xaml
+++ b/PJA_Skills_032/Pages/SettingsPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="PJA_Skills_032.Pages.Page777"
+    x:Class="PJA_Skills_032.Pages.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PJA_Skills_032.Pages"
@@ -8,6 +8,11 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <ScrollViewer Style="{StaticResource PageScrollViewerStyle}">
+            <StackPanel>
+                <TextBlock Text="Settings" Style="{StaticResource TitleTextBlockStyle}" />
 
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Page>
