--- a/PJA_Skills_032/App.xaml
+++ b/PJA_Skills_032/App.xaml
@@ -5,7 +5,7 @@
     xmlns:local="using:PJA_Skills_032"
     xmlns:presentation="using:PJA_Skills_032.Presentation"
     RequestedTheme="Light">
-    
+
     <Application.Resources>
         <Style x:Key="AppTitleTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
             <Setter Property="Margin" Value="12,6,0,6" />
@@ -17,12 +17,13 @@
             <Setter Property="BorderThickness" Value="1" />
             <Setter Property="BorderBrush" Value="{StaticResource primary_light}" />
             <Setter Property="Background" Value="{StaticResource primary_light}" />
+            <Setter Property="Margin" Value="10,0,10, 15" />
         </Style>
-        
+
         <Style x:Key="TitleTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource TitleTextBlockStyle}">
             <Setter Property="Margin" Value="0,1,0,18" />
         </Style>
-        
+
 
         <Style x:Key="ParagraphTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BodyTextBlockStyle}">
             <Setter Property="Margin" Value="0,1,0,34" />
@@ -67,5 +68,11 @@
         <Color x:Key="secondary_text">#727272</Color>
         <Color x:Key="icons">#FFFFFF</Color>
         <Color x:Key="divider">#B6B6B6</Color>
+
+        <!--GRID ITEM SKILL-->
+        <Style x:Key="GridViewItemSkillStyle" TargetType="GridViewItem">
+            <Setter Property="Background" Value="#FFFDB3BB"/>
+            <Setter Property="Margin" Value="6" />
+        </Style>
     </Application.Resources>
 </Application>
