--- a/PJA_Skills_032/Pages/MyProfilePage.xaml
+++ b/PJA_Skills_032/Pages/MyProfilePage.xaml
@@ -7,55 +7,93 @@
     
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d" >
+    <Page.BottomAppBar >
+        <CommandBar Background="#F44336" Foreground="White">
+            <AppBarButton x:Name="AppBarButtonEdit" Label="Edit" Icon="Edit" Foreground="White" />
+        </CommandBar>
+    </Page.BottomAppBar>
 
-    <StackPanel Background="#FFFFCDD2">
-        <ScrollViewer Style="{StaticResource PageScrollViewerStyle}" Grid.RowSpan="2">
 
-            <Grid Height="595">
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition Height="6*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
 
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <TextBlock x:Name="UserName" Text="Andrii Kovalchuk" Style="{StaticResource TitleTextBlockStyle}" Margin="10,10,5,0" Height="30" VerticalAlignment="Top" FontWeight="Bold" />
-                <Image x:Name="image" Grid.Column="1" Margin="10" Source="ms-appx:///Assets/LockScreenLogo.png" d:LayoutOverrides="TopPosition, BottomPosition"/>
-                <TextBlock x:Name="Faculty" Text="Informatyka" Style="{StaticResource TitleTextBlockStyle}" Margin="10,0,5,10" Height="30" VerticalAlignment="Bottom" FontSize="12"  />
+    <ScrollViewer Style="{StaticResource PageScrollViewerStyle}" Grid.RowSpan="2">
+        <Grid Height="630" Margin="0" Padding="0,0,0,50">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="87*"/>
+                <RowDefinition Height="72*"/>
+                <RowDefinition Height="158*"/>
+                <RowDefinition Height="158*"/>
+                <RowDefinition Height="158*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
 
-                <!--SOCIAL-->
-                <StackPanel x:Name="StackPanelSocial" Height="50" Margin="10,10,10,0" Grid.Row="1" VerticalAlignment="Top" Grid.ColumnSpan="2" Style="{StaticResource ProfileCard}" Orientation="Horizontal" >
-                    <Button x:Name="FacebookBtn" Content="F" HorizontalAlignment="Left" Margin="10,5,0,5" VerticalAlignment="Stretch" Width="57" Background="#FF3B5998" Foreground="White"/>
-                    <Button x:Name="GplusBtn" Content="G+" HorizontalAlignment="Left" Margin="10,5,0,5" VerticalAlignment="Stretch" Width="61" Background="#FFDD4B39" Foreground="White"/>
-                    <Button x:Name="SkypeBtn" Content="S" HorizontalAlignment="Left" Margin="10,5,0,5" VerticalAlignment="Stretch" Width="61" Background="#FF12A5F4" Foreground="White"/>
-                    <Button x:Name="button_Copy2" Content="F" HorizontalAlignment="Left" Margin="10,6,0,6" VerticalAlignment="Stretch" Width="55" Background="#FF3B5998" Foreground="White"/>
-                </StackPanel>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock x:Name="UserName" Text="Andrii Kovalchuk" Style="{StaticResource TitleTextBlockStyle}" Margin="10,10,5,0" Height="30" VerticalAlignment="Top" FontWeight="Bold" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin" />
+            <Image x:Name="image" Grid.Column="1" Margin="10" Source="ms-appx:///Assets/LockScreenLogo.png" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin, TopPosition, BottomPosition"/>
+            <TextBlock x:Name="Faculty" Text="Informatyka" Style="{StaticResource TitleTextBlockStyle}" Margin="10,0,5,10" Height="30" VerticalAlignment="Bottom" FontSize="12" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin" FontStyle="Italic"  />
 
-                <!--TO LEARN-->
-                <StackPanel x:Name="StackPanelToLearn" Height="125" Margin="10,80,10,0" Grid.Row="1" VerticalAlignment="Top" Grid.ColumnSpan="2" Style="{StaticResource ProfileCard}" >
-                    <TextBlock x:Name="textBlock2" Style="{StaticResource FlyoutPickerTitleTextBlockStyle}" TextWrapping="Wrap" Margin="9,0" Height="21">
-                    	<Run Text="Want to learn:"/>
-                    	<LineBreak/>
-                    	<Run/>
-                    </TextBlock>
-                    <GridView Width="290" Height="98">
-                        
-                        <GridViewItem Content="PRM" Background="#FFFDB3BB"/>
-                        <GridViewItem Content="PPJ"/>
-                        <GridViewItem Content="PPJ" Margin="0,0,0,4"/>
-                        <GridViewItem Content="PPJ" Margin="0,0,0,4"/>
-                        <GridViewItem Content="PRM" Margin="0,0,0,4"/>
-                        <GridViewItem Content="PRM" Margin="0,0,0,4"/>
-                        <GridViewItem Content="PRM" Margin="0"/>
-                        <GridViewItem Content="PPJ" Margin="0"/>
+            <!--SOCIAL-->
+            <StackPanel x:Name="StackPanelSocial" Grid.Row="1" Grid.ColumnSpan="2" Style="{StaticResource ProfileCard}" Orientation="Horizontal" d:LayoutOverrides="LeftMargin, RightMargin, TopPosition, BottomPosition" >
+                <Button x:Name="FacebookBtn" Content="F" HorizontalAlignment="Left" Margin="10,5,0,5" VerticalAlignment="Stretch" Width="57" Background="#FF3B5998" Foreground="White"/>
+                <Button x:Name="GplusBtn" Content="G+" HorizontalAlignment="Left" Margin="10,5,0,5" VerticalAlignment="Stretch" Width="61" Background="#FFDD4B39" Foreground="White"/>
+                <Button x:Name="SkypeBtn" Content="S" HorizontalAlignment="Left" Margin="10,5,0,5" VerticalAlignment="Stretch" Width="61" Background="#FF12A5F4" Foreground="White"/>
+                <Button x:Name="button_Copy2" Content="F" HorizontalAlignment="Left" Margin="10,6,0,6" VerticalAlignment="Stretch" Width="55" Background="#FF3B5998" Foreground="White"/>
+            </StackPanel>
 
-                    </GridView>
-                </StackPanel>
+            <!--TO LEARN-->
+            <StackPanel x:Name="StackPanelToLearn"  Grid.Row="2" Grid.ColumnSpan="2" Style="{StaticResource ProfileCard}" d:LayoutOverrides="Height, LeftMargin, RightMargin, TopMargin, BottomMargin, TopPosition, BottomPosition" >
+                <TextBlock x:Name="textBlock2" Style="{StaticResource FlyoutPickerTitleTextBlockStyle}" TextWrapping="Wrap" Text="Want to learn:" Margin="9,3,9,0" Height="21" />
+                <GridView ItemContainerStyle="{StaticResource GridViewItemSkillStyle}">
 
-            </Grid>
+                    <GridViewItem Content="PRM" />
+                    <GridViewItem Content="PPJ"/>
+                    <GridViewItem Content="PPJ"/>
+                    <GridViewItem Content="PPJ"/>
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PPJ"/>
 
-        </ScrollViewer>
-    </StackPanel>
+                </GridView>
+            </StackPanel>
+
+            <!--TEACH-->
+            <StackPanel x:Name="StackPanelToTeach"  Grid.Row="3" Grid.ColumnSpan="2" Style="{StaticResource ProfileCard}" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin, TopPosition, BottomPosition" >
+                <TextBlock x:Name="textBlock1" Style="{StaticResource FlyoutPickerTitleTextBlockStyle}" TextWrapping="Wrap" Text="Want to teach:" Margin="9,3,9,0" Height="21" />
+                <GridView ItemContainerStyle="{StaticResource GridViewItemSkillStyle}">
+
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PPJ"/>
+                    <GridViewItem Content="PPJ"/>
+                    <GridViewItem Content="PPJ"/>
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PPJ"/>
+
+                </GridView>
+            </StackPanel>
+
+            <!--KORKING-->
+            <StackPanel x:Name="StackPanelToKorking"  Grid.Row="4" Grid.ColumnSpan="2" Style="{StaticResource ProfileCard}" d:LayoutOverrides="Height, LeftMargin, RightMargin, TopPosition, BottomPosition" >
+                <TextBlock x:Name="textBlock3" Style="{StaticResource FlyoutPickerTitleTextBlockStyle}" TextWrapping="Wrap" Text="Want to provide korking:" Margin="9,3,9,0" Height="21" />
+                <GridView ItemContainerStyle="{StaticResource GridViewItemSkillStyle}">
+
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PPJ"/>
+                    <GridViewItem Content="PPJ"/>
+                    <GridViewItem Content="PPJ"/>
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PRM"/>
+                    <GridViewItem Content="PPJ"/>
+
+                </GridView>
+            </StackPanel>
+
+        </Grid>
+
+    </ScrollViewer>
+
 </Page>
