--- a/PJA_Skills_032/App.xaml
+++ b/PJA_Skills_032/App.xaml
@@ -7,18 +7,48 @@
     RequestedTheme="Light">
 
     <Application.Resources>
+
+        <!--SCROLL-->
+        <Style x:Key="PageScrollViewerStyle" TargetType="ScrollViewer">
+            <Setter Property="Padding" Value="24,20,24,24" />
+            <Setter Property="Background" Value="{StaticResource accent}" />
+        </Style>
+
+        <presentation:ObjectToMenuItemConverter x:Key="ObjectToMenuItemConverter"/>
+
+        <!--COLORS-->
+        <Color x:Key="primary">#F44336</Color>
+        <Color x:Key="primary_dark">#D32F2F</Color>
+        <Color x:Key="primary_light">#FFCDD2</Color>
+        <Color x:Key="accent">#FFFFFF</Color>
+        <Color x:Key="primary_text">#212121</Color>
+        <Color x:Key="secondary_text">#727272</Color>
+        <Color x:Key="icons">#FFFFFF</Color>
+        <Color x:Key="divider">#B6B6B6</Color>
+        <Color x:Key="app_bar_red">#FFF44336</Color>
+
+        <!--GRID ITEM SKILL-->
+        <Style x:Key="GridViewItemSkillStyle" TargetType="GridViewItem">
+            <Setter Property="Background" Value="#FFF44336"/>
+            <Setter Property="Margin" Value="6" />
+            
+        </Style>
+
+        <!--PROFILE CARD SKILL-->
+        <Style x:Key="ProfileCard" TargetType="StackPanel">
+            <Setter Property="CornerRadius" Value="1" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="BorderBrush" Value="Gray" />
+            <Setter Property="Background" Value="White" />
+            <Setter Property="Margin" Value="10,0,10, 15" />
+        </Style>
+
         <Style x:Key="AppTitleTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
             <Setter Property="Margin" Value="12,6,0,6" />
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
 
-        <Style x:Key="ProfileCard" TargetType="StackPanel">
-            <Setter Property="CornerRadius" Value="1" />
-            <Setter Property="BorderThickness" Value="1" />
-            <Setter Property="BorderBrush" Value="{StaticResource primary_light}" />
-            <Setter Property="Background" Value="{StaticResource primary_light}" />
-            <Setter Property="Margin" Value="10,0,10, 15" />
-        </Style>
+        
 
         <Style x:Key="TitleTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource TitleTextBlockStyle}">
             <Setter Property="Margin" Value="0,1,0,18" />
@@ -51,28 +81,6 @@
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
 
-        <!--SCROLL-->
-        <Style x:Key="PageScrollViewerStyle" TargetType="ScrollViewer">
-            <Setter Property="Padding" Value="24,20,24,24" />
-            <Setter Property="Background" Value="{StaticResource accent}" />
-        </Style>
-
-        <presentation:ObjectToMenuItemConverter x:Key="ObjectToMenuItemConverter"/>
-
-        <!--COLORS-->
-        <Color x:Key="primary">#F44336</Color>
-        <Color x:Key="primary_dark">#D32F2F</Color>
-        <Color x:Key="primary_light">#FFCDD2</Color>
-        <Color x:Key="accent">#FFFFFF</Color>
-        <Color x:Key="primary_text">#212121</Color>
-        <Color x:Key="secondary_text">#727272</Color>
-        <Color x:Key="icons">#FFFFFF</Color>
-        <Color x:Key="divider">#B6B6B6</Color>
-
-        <!--GRID ITEM SKILL-->
-        <Style x:Key="GridViewItemSkillStyle" TargetType="GridViewItem">
-            <Setter Property="Background" Value="#FFFDB3BB"/>
-            <Setter Property="Margin" Value="6" />
-        </Style>
+      
     </Application.Resources>
 </Application>
