--- a/PJA_Skills_032/Pages/HomePage.xaml
+++ b/PJA_Skills_032/Pages/HomePage.xaml
@@ -2,18 +2,70 @@
     x:Class="PJA_Skills_032.Pages.HomePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PJA_Skills_032.Pages"
+    xmlns:local="using:PJA_Skills_032"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:data="using:PJA_Skills_032.Model"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ScrollViewer Style="{StaticResource PageScrollViewerStyle}">
-            <StackPanel>
-                <TextBlock Text="Home Page" Style="{StaticResource TitleTextBlockStyle}" />
 
-                
+    <Page.Resources>
+        <!-- Use a collection view source for content that presents itself as a list of items that can be grouped or sorted.  Otherwise, you can use x:Bind
+        directly on the GridView's item source to for further optimization. Please see the AppUIBasics sample for an example of how to do this.  -->
+        <CollectionViewSource x:Name="ContactsCVS"  IsSourceGrouped="True" />
+
+        <!--#region DataTemplate-->
+        <!-- When using x:Bind, you need to set x:DataType -->
+        <DataTemplate x:Name="ContactGridViewTemplate" x:DataType="data:Contact">
+            <StackPanel Orientation="Vertical">
+                <Ellipse x:Name="Ellipse" 
+                             Width ="140"
+                             Height="140"
+                             VerticalAlignment="Center"
+                             HorizontalAlignment="Center"
+                             Fill="LightGray"
+                             Margin="4,4,4,4"/>
+                <!-- Phase 2: TextBlock with contact name-->
+                <TextBlock x:Name="ContactName" 
+                               Margin="4,4,0,4"
+                               Text="{x:Bind Name}" 
+                               x:Phase="2" 
+                               Style="{ThemeResource BodyTextBlockStyle}" 
+                               HorizontalAlignment="Center"/>
+                <!-- Phase 3: TextBlock with contact job title-->
+                <TextBlock x:Name="Position" 
+                               Text="{x:Bind Position}" 
+                               Margin="4,4,0,4"
+                               x:Phase="3" 
+                               Style="{ThemeResource BodyTextBlockStyle}"
+                               FontSize="12"
+                               Foreground="Gray"
+                               HorizontalAlignment="Center"/>
             </StackPanel>
-        </ScrollViewer>
-    </Grid>
+        </DataTemplate>
+        <!--#endregion-->
+    </Page.Resources>
+
+
+    <ScrollViewer Style="{StaticResource PageScrollViewerStyle}">
+        <StackPanel Orientation="Vertical">
+            <TextBlock Text="Home Page" Style="{StaticResource TitleTextBlockStyle}" />
+
+            <GridView ItemsSource="{x:Bind ContactsCVS.View}"
+                  ItemTemplate="{StaticResource ContactGridViewTemplate}">
+                <GridView.GroupStyle>
+                    <GroupStyle >
+                        <GroupStyle.HeaderTemplate>
+                            <DataTemplate x:DataType="data:GroupInfoList">
+                                <TextBlock Text="{x:Bind Key}" 
+                                       Style="{ThemeResource TitleTextBlockStyle}"/>
+                            </DataTemplate>
+                        </GroupStyle.HeaderTemplate>
+                    </GroupStyle>
+                </GridView.GroupStyle>
+            </GridView>
+
+        </StackPanel>
+    </ScrollViewer>
+
 </Page>
